created blog-box div and blog page

--- a/app/blog.html
+++ b/app/blog.html
@@ -65,7 +65,7 @@
     <main class="main">
         <section class="top">
             <div class="container-inner">
-                <h2 class="top__title">Log in</h2>
+                <h2 class="top__title">Blog</h2>
                 <div class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item">
@@ -75,13 +75,164 @@
                         </li>
                         <li class="breadcrumbs__item">
                             <a class="breadcrumbs__link" href="#">
-                                Log in
+                                Blog
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </section>
+
+        <section class="blog-page">
+            <div class="container-inner">
+                <div class="blog-page__inner">
+                    <div class="blog-page__content">
+                        <div class="blog-page__item">
+                            <div class="blog-page__item-box">
+                                <a class="blog-page__item-imglink" href="#">
+                                    <img class="blog-page__item-img" src="images/blog/page/1.jpg" alt="">
+                                </a>
+                                <div class="blog-box">
+                                    <div class="blog-box__date">28 JANUARY, 2020</div>
+                                    <a class="blog-box__author" href="#">BY ADMIN</a>
+                                </div>
+                            </div>
+                            <h3 class="blog-page__item-title">
+                                <a class="blog-page__item-titlelink" href="#" >
+                                    Fonsectetur adipisicing eiusmod
+                                </a>
+                            </h3>
+                            <p class="blog-page__item-text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                alLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                            </p>
+                            <a class="blog-page__item-link" href="#">View More <span class="arrow"></span></a>
+                        </div>
+                        <div class="blog-page__item">
+                            <div class="blog-page__item-box">
+                                <a class="blog-page__item-imglink" href="#">
+                                    <img class="blog-page__item-img" src="images/blog/page/2.jpg" alt="">
+                                </a>
+                                <div class="blog-box">
+                                    <div class="blog-box__date">28 JANUARY, 2020</div>
+                                    <a class="blog-box__author" href="#">BY ADMIN</a>
+                                </div>
+                            </div>
+                            <h3 class="blog-page__item-title">
+                                Fonsectetur adipisicing elit,
+                            </h3>
+                            <p class="blog-page__item-text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                alLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                            </p>
+                            <a class="blog-page__item-link" href="#">View More <span class="arrow"></span></a>
+                        </div>
+                        <div class="blog-page__item">
+                            <div class="blog-page__item-box">
+                                <a class="blog-page__item-imglink" href="#">
+                                    <img class="blog-page__item-img" src="images/blog/page/3.jpg" alt="">
+                                </a>
+                                <div class="blog-box">
+                                    <div class="blog-box__date">28 JANUARY, 2020</div>
+                                    <a class="blog-box__author" href="#">BY ADMIN</a>
+                                </div>
+                            </div>
+                            <h3 class="blog-page__item-title">
+                                Fsectetur adipisicing tempor incididunt 
+                            </h3>
+                            <p class="blog-page__item-text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                alLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                            </p>
+                            <a class="blog-page__item-link" href="#">View More <span class="arrow"></span></a>
+                        </div>
+                        <div class="blog-page__item">
+                            <div class="blog-page__item-box">
+                                <a class="blog-page__item-imglink" href="#">
+                                    <img class="blog-page__item-img" src="images/blog/page/4.jpg" alt="">
+                                </a>
+                                <div class="blog-box">
+                                    <div class="blog-box__date">28 JANUARY, 2020</div>
+                                    <a class="blog-box__author" href="#">BY ADMIN</a>
+                                </div>
+                            </div>
+                            <h3 class="blog-page__item-title">
+                                vonsectetur adipisicing elit
+                            </h3>
+                            <p class="blog-page__item-text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                alLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna
+                            </p>
+                            <a class="blog-page__item-link" href="#">View More <span class="arrow"></span></a>
+                        </div>
+                    </div>
+                    <div class="blog-page__aside">
+                        <div class="filter">
+                            <form class="filter-search">
+                                <input class="filter-search__input" type="text">
+                                <button class="filter-search__btn" type="submit">
+                                    <img class="filter-search__img" src="images/icons/filter-search.svg"
+                                        alt="search icon">
+                                </button>
+                            </form>
+                            <div class="filter-category filter__item">
+                                <h3 class="filter__title">CATEGORY</h3>
+                                <form class="filter-category__form" action="#">
+                                    <label class="filter-category__label">
+                                        <input class="filter-category__input" type="radio" name="category">
+                                        <div class="filter-category__checkbox">
+                                            <span>Chair</span>
+                                            <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                                alt="arrow">
+                                        </div>
+                                    </label>
+                                    <label class="filter-category__label">
+                                        <input class="filter-category__input" type="radio" name="category">
+                                        <div class="filter-category__checkbox">
+                                            <span>Table</span>
+                                            <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                                alt="arrow">
+                                        </div>
+                                    </label>
+                                    <label class="filter-category__label">
+                                        <input class="filter-category__input" type="radio" name="category">
+                                        <div class="filter-category__checkbox">
+                                            <span>Lamp</span>
+                                            <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                                alt="arrow">
+                                        </div>
+                                    </label>
+                                    <label class="filter-category__label">
+                                        <input class="filter-category__input" type="radio" name="category">
+                                        <div class="filter-category__checkbox">
+                                            <span>Watch</span>
+                                            <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                                alt="arrow">
+                                        </div>
+                                    </label>
+                                    <label class="filter-category__label">
+                                        <input class="filter-category__input" type="radio" name="category">
+                                        <div class="filter-category__checkbox">
+                                            <span>Clock</span>
+                                            <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                                alt="arrow">
+                                        </div>
+                                    </label>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
         <div class="partners">
             <div class="container-inner">
                 <div class="partners__items">
