--- a/app/index.html
+++ b/app/index.html
@@ -702,9 +702,9 @@
                             <a class="blog__text" href="#">
                                 Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
                             </a>
-                            <div class="blog__info">
-                                <div class="blog__date">28 JANUARY, 2020</div>
-                                <a class="blog__author" href="#">BY ADMIN</a>
+                            <div class="blog-box">
+                                <div class="blog-box__date">28 JANUARY, 2020</div>
+                                <a class="blog-box__author" href="#">BY ADMIN</a>
                             </div>
                         </div>
                     </div>
@@ -716,9 +716,9 @@
                             <a class="blog__text" href="#">
                                 Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
                             </a>
-                            <div class="blog__info">
-                                <div class="blog__date">28 JANUARY, 2020</div>
-                                <a class="blog__author" href="#">BY ADMIN</a>
+                            <div class="blog-box">
+                                <div class="blog-box__date">28 JANUARY, 2020</div>
+                                <a class="blog-box__author" href="#">BY ADMIN</a>
                             </div>
                         </div>
                     </div>
@@ -730,9 +730,9 @@
                             <a class="blog__text" href="#">
                                 Rncididunt ut labore et dolore magna aliqua. Ut enim
                             </a>
-                            <div class="blog__info">
-                                <div class="blog__date">28 JANUARY, 2020</div>
-                                <a class="blog__author" href="#">BY ADMIN</a>
+                            <div class="blog-box">
+                                <div class="blog-box__date">28 JANUARY, 2020</div>
+                                <a class="blog-box__author" href="#">BY ADMIN</a>
                             </div>
                         </div>
                     </div>
